--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
 
   <!-- Start your code here -->
 
+  <main id="main">
+    <!-- ======= About Section ======= -->
+  </main>
+
+  <!-- ======= Footer ======= -->
+
+
   <div id="preloader"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
