--- a/index.html
+++ b/index.html
@@ -33,12 +33,11 @@
 
   <!-- Start your code here -->
 
-  <main id="main">
-    <!-- ======= About Section ======= -->
-  </main>
+<main id="main">
+ <!-- ======= about ======= -->
+</main>
 
   <!-- ======= Footer ======= -->
-
 
   <div id="preloader"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
