--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -57,7 +57,7 @@
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.instagram.com/vignesh_p3007/profilecard/?igsh=enp1aWNsY2FoeW5n" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
@@ -85,17 +85,17 @@
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>23 June 2003</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://darshan-bhandary.netlify.app/</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Mangalore, Karnataka</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>06 June 2004</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://example.com/</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 78921 02241</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Kundapura, Karnataka</span></li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>22</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>20</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>drshnbhandary@gmail.com</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>vigneshpoojari3007@gmail.com</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
               </ul>
             </div>
